✨ uploadfile function is ready to use and an audio player was added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin="" />
+      <link rel="stylesheet" href="essential_audio.css" />
     <title>Bird Encounters</title>
   </head>
   <body>
@@ -16,5 +17,6 @@
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
   crossorigin=""></script>
+  <script src="essential_audio.js"></script>
   </body>
 </html>
